<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="TypographyDashes">
    <!-- Please refer to http://oxford-portal.azurewebsites.net/doc/general/subscription-key-mgmt to get your subscription key -->
    <!-- If you have one subscription key, you can add it here to use the service -->
    <string name="primaryKey">5ebd8a28ccfc428aa19733922d9c9042</string>
    <string name="add_subscription_key_tip_title">Subscription Key is Needed</string>
    <string name="add_subscription_key_tip">Please put your subscription key to source file \"app/res/values/strings.xml\" to enable Speech API calls.</string>

    <!-- 
    Enter an optional authentication Uri such as: 
    https://westus.api.cognitive.microsoft.com/sts/v1.0/issuetoken
    -->
    <string name="authenticationUri"></string>
    
    <string name="luisAppID">yourLuisAppID</string>
    <string name="luisSubscriptionID">yourLuisSubscriptionID</string>

    <string name="app_name">Dictation</string>
    <string name="action_settings">Settings</string>

    <string name="meeting_notes_user_name">Enter your name</string>
    <string name="meeting_notes_meeting_id">Enter your meeting Id</string>
    <string name="meeting_notes_share">Share this meeting id %1$s, with all attendees.</string>
    <string name="meeting_notes_problem">There was a problem creating the meeting notes. please retry later.</string>

    <string name="mode_dictation">DICTATION</string>
    <string name="mode_meeting_notes">MEETING NOTES</string>
    <string name="next">NEXT</string>
    <string name="save">SAVE</string>
    <string name="text_continue">CONTINUE</string>
    <string name="transcripts">Meeting Transcripts</string>

    <string name="my_notes">My Notes</string>
    <string name="select_mode">Select Mode</string>
    <string name="select_time">Select Time</string>
    <string name="select_title">Select Title</string>
    <string name="select_title_desc">Set your document title</string>
    <string name="dictation_title">Record your text</string>
    <string name="dictation">Dictation</string>
    <string name="time_remaining">Remaining Time\n%1$s</string>
    <string name="mode_meeting">Meeting Id : %1$s</string>
    <string name="mode_meeting_name">Attendee Name : %1$s</string>
    <string name="mode_text">Mode : %1$s</string>
    <string name="title_text">Title : %1$s</string>
    <string name="listening">Listening</string>
    <string name="pdf_generator">Generate PDF</string>
    <string name="check_errors">Check Errors</string>

    <string name="no_notes">Click on the FAB button to start creating audio notes.</string>

    <string name="instructions">Default Recording time is for 5 Mins.\n\nPress [img src=ic_repeat/] to reset the recording. \n\nPress [img src=ic_done/] when you are done with the recording.</string>

</resources>
