<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="80dp"
    android:background="@color/dictation_header_bg"
    android:orientation="horizontal"
    android:paddingLeft="@dimen/dimen_15"
    android:paddingRight="@dimen/dimen_15"
    android:weightSum="1">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="0.65"
        android:gravity="center_vertical|left"
        android:orientation="vertical">

        <TextView
            android:id="@+id/mode_text_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mode_text"
            android:textColor="@color/white"/>

        <TextView
            android:id="@+id/title_title_title"
            android:layout_marginTop="@dimen/dimen_5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_text"
            android:textColor="@color/white"/>
    </LinearLayout>

    <TextView
        android:id="@+id/timer_text"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="0.35"
        android:gravity="center_vertical|right"
        android:text="@string/time_remaining"
        android:textColor="@color/white"/>
</LinearLayout>