<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:background="#A3A3A3"
    android:orientation="vertical">

    <TextView
        android:id="@+id/dialog_heading"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_gravity="center_horizontal"
        android:background="@color/colorPrimary"
        android:gravity="center"
        android:text="@string/mode_meeting_notes"
        android:textColor="@color/white"
        android:textStyle="bold"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dimen_10"
        android:layout_marginRight="@dimen/dimen_10"
        android:orientation="vertical">


        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_userName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_20">

            <EditText
                android:id="@+id/input_et_userName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/meeting_notes_user_name"/>
        </android.support.design.widget.TextInputLayout>

        <CheckBox
            android:id="@+id/input_cb_isorganiser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_20"
            android:checked="true"
            android:text="Are you Organiser ?"/>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_meeting_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_20"
            android:visibility="gone">

            <EditText
                android:id="@+id/input_et_meeting_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/meeting_notes_meeting_id"/>
        </android.support.design.widget.TextInputLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/dialog_ok"
        android:layout_width="150dp"
        android:layout_height="36dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="@dimen/dimen_20"
        android:layout_marginTop="@dimen/dimen_20"
        android:background="@color/mode_bg"
        android:gravity="center"
        android:text="OK"
        android:textColor="@color/white"/>
</LinearLayout>